<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutFragment">

    <data>
        <variable
            name="aboutFragment"
            type="com.example.okishiru.ui.fragment.AboutFragment" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/aboutTitle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/header_title_about"
            android:contentDescription="@string/description_about_title" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/aboutTitle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <!--ホーム画面-->
                    <TextView
                        android:id="@+id/homeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_home_title"
                        android:textSize="15sp"
                        android:paddingStart="10dp"
                        android:paddingBottom="3dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/homeImage"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:background="@color/white_77"
                        android:src="@drawable/about_home_img"
                        android:contentDescription="@string/description_home_image"
                        app:layout_constraintEnd_toStartOf="@id/homeText"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/homeTitle" />

                    <ImageView
                        android:id="@+id/homeText"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="15dp"
                        android:background="@color/white_77"
                        android:src="@drawable/about_home_text"
                        android:contentDescription="@string/description_home_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/homeImage"
                        app:layout_constraintTop_toTopOf="@id/homeImage" />

                    <!--ガイド画面-->
                    <TextView
                        android:id="@+id/guideTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/about_guide_title"
                        android:textSize="15sp"
                        android:paddingStart="10dp"
                        android:paddingBottom="3dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/homeImage" />

                    <ImageView
                        android:id="@+id/guideImage"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:background="@color/white_77"
                        android:src="@drawable/about_guide_img"
                        android:contentDescription="@string/description_guide_image"
                        app:layout_constraintEnd_toStartOf="@id/guideText1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/guideTitle" />

                    <ImageView
                        android:id="@+id/guideText1"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="15dp"
                        android:background="@color/white_77"
                        android:src="@drawable/about_guide_favorite_text"
                        android:contentDescription="@string/description_home_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guideImage"
                        app:layout_constraintTop_toTopOf="@id/guideImage" />

                    <!--設定画面-->
                    <TextView
                        android:id="@+id/settingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/about_setting_title"
                        android:textSize="15sp"
                        android:paddingStart="10dp"
                        android:paddingBottom="3dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/guideImage" />

                    <ImageView
                        android:id="@+id/settingImage"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:background="@color/white_77"
                        android:src="@drawable/about_setting_img"
                        android:contentDescription="@string/description_setting_image"
                        app:layout_constraintEnd_toStartOf="@id/settingText1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/settingTitle" />

                    <ImageView
                        android:id="@+id/settingText1"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="15dp"
                        android:background="@color/white_77"
                        android:src="@drawable/about_sound_guide_settings_text"
                        android:contentDescription="@string/description_home_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/settingImage"
                        app:layout_constraintTop_toTopOf="@id/settingImage" />

                    <!--お気に入り画面-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:id="@+id/favoriteTitle"
                        android:text="@string/about_favorite_title"
                        android:textSize="15sp"
                        android:paddingStart="10dp"
                        android:paddingBottom="3dp"
                        app:layout_constraintTop_toBottomOf="@id/settingImage"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:id="@+id/favoriteImage"
                        android:src="@drawable/about_favorite_img"
                        android:background="@color/white_77"
                        android:contentDescription="@string/description_favorite_image"
                        app:layout_constraintTop_toBottomOf="@id/favoriteTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/favoriteText" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="15dp"
                        android:id="@+id/favoriteText"
                        android:src="@drawable/about_favorite_text"
                        android:background="@color/white_77"
                        android:contentDescription="@string/description_favorite_text"
                        app:layout_constraintTop_toTopOf="@id/favoriteImage"
                        app:layout_constraintStart_toEndOf="@id/favoriteImage"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:id="@+id/imageView"
                        android:paddingBottom="20dp"
                        android:contentDescription="@string/about_inquiry_text"
                        app:layout_constraintTop_toBottomOf="@id/favoriteText"
                        app:layout_constraintStart_toStartOf="parent"
                        android:src="@drawable/about_inquiry_img"
                        tools:layout_editor_absoluteY="414dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>