<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="5dp"
    android:background="@color/white_77">

    <!--        各アイテムのサムネイル画像-->
    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:contentDescription="@string/item_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemTitle"
        tools:src="@drawable/article_img_shurijo" />

    <!--    お気に入り登録のボタン-->
    <ImageButton
        android:id="@+id/favoriteButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        android:contentDescription="@string/favorite_button_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/star"
        tools:src="@drawable/ic_not_favorite" />

    <!--    各アイテムのタイトル-->
    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/article_title_underbar"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/favoriteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="首里城" />

    <!--    各アイテムの説明-->
    <TextView
        android:id="@+id/itemDescribe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@id/page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemImage"
        app:layout_constraintTop_toBottomOf="@id/itemTitle"
        tools:text="首里城は、琉球王朝の王城で沖縄県内最大規模の城です。" />

    <!--    各アイテムの紹介サイト-->
    <LinearLayout
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemImage">

        <ImageView
            android:id="@+id/pageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_page_icon"
            android:src="@drawable/ic_page" />

        <TextView
            android:id="@+id/itemPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/item_page" />
    </LinearLayout>

    <!--    各アイテムをマップで表示-->
    <LinearLayout
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/page">

        <ImageView
            android:id="@+id/mapIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_map_icon"
            android:src="@drawable/ic_map" />

        <TextView
            android:id="@+id/itemMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/item_map" />

    </LinearLayout>

    <!--    <View-->
    <!--        android:id="@+id/underline"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/black"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>